<resources>
    <string name="app_name">Easy Math</string>
    <string name="geo_forms">Geometric Forms</string>
    <string name="title_activity_geometric_forms">Geometric Forms</string>
    <string name="square">Square</string>
    <string name="triangle">Triangle</string>
    <string name="diamond">Diamond</string>
    <string name="rectangle">Rectangle</string>
    <string name="circle">Circle</string>
    <string name="title_activity_triangle_operations">Triangle</string>
    <string name="herons_formula">Calculate the area with the measures of the 3 sides</string>
    <string name="base_height">Calculate the area with the base and height</string>
    <string name="angle">Calculate the area with 2 sides and the angle between them</string>
    <string name="squi">Calculate the height and area of a equilateral triangle</string>
    <string name="place_holder">Place Holder</string>
    <string name="title_activity_base_and_height">Base and Height</string>
    <string name="base">Base</string>
    <string name="height">Height</string>
    <string name="formula">Formula</string>
    <string name="calculate">Calculate</string>
    <string name="result">Result = "</string>
    <string name="icon">icon</string>
    <string name="error_height">Please type the value of the height</string>
    <string name="error_base">Please type the value of the base</string>
    <string name="error_heightbase">Please type the values of the base and height</string>
    <string name="title_activity_three_sides">Three Sides</string>
    <string name="side01">Side 1</string>
    <string name="side02">Side 2</string>
    <string name="side03">Side 3</string>
    <string name="missing">missing</string>
    <string name="title_activity_two_sides_and_angle">Two Sides and Angle</string>
    <string name="angleactivity">Angle</string>
    <string name="title_activity_equilateral_triangle">Equilateral Triangle</string>
    <string name="side_of_equi">Measure of the side</string>
    <string name="area_result">Area = "</string>
    <string name="height_result">Height = "</string>
    <string name="close">Close</string>
    <string name="title_activity_square">Square</string>
    <string name="title_activity_diamond">Diamond</string>
    <string name="diagonal_1">Diagonal 1</string>
    <string name="diagonal_2">Diagonal 2</string>
    <string name="title_activity_rectangle">Rectangle</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="diameter_area_circle">Calculate the diameter and area</string>
    <string name="sector_circle">Calculate a sector of a circle</string>
    <string name="title_activity_circle_operations">Circle</string>
    <string name="diameter_result">Diameter = "</string>
    <string name="radius">Radius of the circle</string>
    <string name="title_activity_circle_diameter_area">Diameter and Area</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>


    <string name="legend">Legend</string>
    <string name="area_legend">A = Area</string>
    <string name="height_legend">h = Height</string>
    <string name="base_legend">b = Base</string>
    <string name="side_legend">l = Side</string>
    <string name="side1_legend">a = Side 1</string>
    <string name="side2_legend">b = Side 2</string>
    <string name="side3_legend">c = Side 3</string>
    <string name="semi_perimeter_legend">p = Semi-Perimeter</string>
    <string name="alpha_legend">α = Angle</string>
    <string name="diagonal1_legend">d = Diagonal 1</string>
    <string name="diagonal2_legend">D = Diagonal 2</string>
    <string name="length_legend">a = Length</string>
    <string name="width_legend">b = Width</string>
    <string name="diameter_legend">D = Diameter</string>
    <string name="radius_legend">r = Radius</string>
    <string name="pi_legend">π = PI</string>



</resources>
